example/secondfile/objects/Apttus_Config2__PriceMatrixEntry__c.object
<CustomObject>
    <fields>
        <fullName>BEID__c</fullName>
        <label>BEID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillDisplayName__c</fullName>
        <description>For Capturing Bill Display Name from Rates</description>
        <formula>Rate__r.Bill_Display_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Type_PL__c</fullName>
        <formula>if(  
ISPICKVAL(Apttus_Config2__PriceMatrixId__r.Apttus_Config2__PriceListItemId__r.Apttus_Config2__ChargeType__c,&apos;Port Speed Fee&apos;),
&apos;Port Speed Fee&apos;, 
TEXT(Apttus_Config2__PriceMatrixId__r.Apttus_Config2__PriceListItemId__r.Apttus_Config2__ChargeType__c)
)</formula>
        <label>Charge Type PL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_PL__c</fullName>
        <formula>Apttus_Config2__PriceMatrixId__r.Apttus_Config2__PriceListItemId__r.Apttus_Config2__Description__c</formula>
        <label>Description PL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Set_ID__c</fullName>
        <label>Determinant Set ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Low_Level__c</fullName>
        <label>Low Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBI_Number__c</fullName>
        <label>PBI Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLName__c</fullName>
        <formula>Apttus_Config2__PriceMatrixId__r.Apttus_Config2__PriceListItemId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PLIName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceListItemId__c</fullName>
        <formula>Apttus_Config2__PriceMatrixId__r.Apttus_Config2__PriceListItemId__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PriceListItemId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceListName__c</fullName>
        <formula>Apttus_Config2__PriceMatrixId__r.Apttus_Config2__PriceListItemId__r.Apttus_Config2__PriceListId__r.Name</formula>
        <label>PriceListName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate</label>
        <referenceTo>Rates__c</referenceTo>
        <relationshipLabel>Price Matrix Entries</relationshipLabel>
        <relationshipName>Price_Matrix_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>